--- a/style.css
+++ b/style.css
@@ -63,31 +63,33 @@ nav a {
 
 
 /* --------------- HEADER --------------- */
+header {
+    max-width: 1100px;
+    margin: 0 auto;
+}
 .background {
-    /* display: inline-block; */
-    /* width: 70%; */
-    height: 40vh;
+    height: 42vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.71), rgba(0, 0, 0, 0.71)), url(img/background4.png);
-    background-size: 70%;        
-    /* size of the img */
+    background-size: 62%;          /* size of the img */  
     background-repeat: repeat-y;
     background-position-x: left;
-    background-position-y: 58%;
+    background-position-y: 56%;
     background-attachment: fixed;    
     /*super cool effect where the image does not move*/
 }
 .content {
-    display: inline-block;
-    /* so I can apply margin and padding */
+    position: relative;
+    left: 50%;
+    top: 30%;
     background: #fff;
     text-align: justify;
-    margin-left: 55%;
-    margin-top: 8vh;
-    margin-right: 5%;
     padding: 50px;
+    max-width: 315px;
 }
 .content p {
     padding-top: 30px;
+    color: rgb(111, 125, 138);
+    font-size: 12px;
 }
 
 /* --------------- Section_PRODUCTS --------------- */
@@ -95,83 +97,64 @@ nav a {
     padding: 80px 0 80px;
 }
 .fancyBorder {
-    display: block;       /* these first 3 prop. to center the img */
-    margin-left: auto;
-    margin-right: auto;
+    display: block;       /* these first 2 prop. to center the img */
+    margin: 0 auto;
     width: 500px;
     height: auto;
 }
-.products_display {
-    padding: 0 50px;
+#products_display {
+    max-width: 1000px;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    row-gap: 50px;
-    justify-content: space-around;   /* not between bc in smll screen, there is no margin left */
+    row-gap: 15px;
+    column-gap: 15px;
+    justify-content: center;   /* not between bc in smll screen, there is no margin left */
+    align-items: center;
 }
-.products_display::after {
-    content: "";
-    flex: auto;
-}
-.product {
-    margin: 0 30px;
-    text-align: center;
-}
+/* following 2 prop.: for display prperly the img inside the a */
+.product img { display: block; }
+.product a { display: block; }
+
 .product img {
     box-shadow: 1px 1px 20px -5px rgba(0, 0, 0, 50%);
 }
-
-
-
-
-
-/* following 2 prop.: for display prperly the img inside the a */
-.product img { display: block; }
-.product a { display: inline-block; }
-
-.in8x10 {
-    margin-bottom: 20px;
+.product {
+    text-align: center;
+    position: relative;         /* so I can make .centerDiv absolute */
+}
+.centerDiv {
+    position: absolute;
+    /* and I made his parent (product) position: relative */
+    /* Therefore the origin is the corner of the "product" */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.7);
+    transition: all 0.3s ease;
+    opacity: 0;
+}
+.product:hover .centerDiv {
+    opacity: 1;
 }
 .in8x10 img {
-    height: 250px;
+    height: 420px;
     width: auto;
-}
-.in7x9 {
-    margin: 10px 20px 30px;
 }
 .in7x9 img {
-    height: 230px;
+    height: 390px;
     width: auto;
 }
-.in4x4 {
-    margin: 50px 20px 70px;
-}
 .in4x4 img {
-    height: 150px;
+    height: 330px;
     width: auto;
 }
 .exhi {
     color: red;
     font-size: 10px;
 }
-
-
-
-.product {
-    position: relative;
-}
-.product div{
-    position: absolute;
-    color: #fff;
-    /* z-index: 1; */
-    opacity: 0;
-}
-.in8x10{
-    background: #000;
-}
-.in8x10 img:hover {
-    opacity: 0.3;
-}
-
-
 
