--- a/style.css
+++ b/style.css
@@ -1,160 +1,271 @@
-/* --------------- INITIAL_SETUP --------------- */
+/* GOOGLE FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;500;700&family=League+Spartan:wght@100;200;300;400;500;700&display=swap');
+
+/* GENERAL SETUP */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-/* a {
-    background: yellow;
-} */
-html,
+a { 
+  text-decoration: none; 
+  display: inline-block;
+}
+ul { list-style: none; }
+
+main {
+  width: 100%;
+  max-width: 930px;
+  background: #fff;
+  margin: auto;
+}
 body {
-    font-family: 'Spartan', sans-serif;
-    font-weight: 300;
-    color: #000;
-    display: block;
-    height: 100%;
-    padding: 0 2%;
-    /* why */
+  font-family: 'Spartan', sans-serif;
+  font-weight: 300;
 }
 h1 {
-    font-weight: 700;
-    font-size: 20px;
+  font-family: 'Spartan', sans-serif;;
+  font-weight: 400;
+  font-size: 24px;
 }
 h2 {
-    font-family: 'Kaisei HarunoUmi', serif;
-    text-align: center;
-    font-size: 34px;
+  font-family: 'Kaisei HarunoUmi', serif;
+  font-weight: 400;
+  font-size: 24px;
+}
+h3 {
+  font-family: 'Spartan', sans-serif;;
+  font-weight: 200;
+  font-size: 16px;
 }
 
-
-/* --------------- INITIAL_SETUP --------------- */
+/* --------------- NAVBAR --------------- */
 nav {
-    padding: 30px 0 40px;
-    font-size: 11px;
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
 }
-nav ul {
-    flex: 1;       /* so it fills the remaining space and we can apply flex-end later */
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+nav .links {
+  display: flex;
+  align-items: center;
 }
-.logo {
-    height: 50px;
-    width: auto;
-    border-radius: 50%;
-    box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 50%);
+nav .links li {
+  margin-right: 30px;
+  font-size: 12px;
 }
-nav li {
-    display: inline-block;
-    padding: 10px 0;
-    margin-left: 30px;
-}
-nav li img {
-    height: 20px;
-    width: auto;
-}
-nav a {
-    text-decoration: none;
+.nav-logo {
+  height: 50px;
+  width: auto;
+  border-radius: 50%;
+  box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 50%);
 }
 
 
 /* --------------- HEADER --------------- */
-header {
-    max-width: 1100px;
-    margin: 0 auto;
+.header-bg {
+  height: 42vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.71), rgba(0, 0, 0, 0.71)), url(img/relaxing.jpeg);
+  background-repeat: no-repeat;
+  background-size: 78%;          
+  background-position-x: left;
+  background-position-y: 60%;
+  background-attachment: fixed; 
+  display: flex;
+  align-items: center;
+  position: relative;
 }
-.background {
-    height: 42vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.71), rgba(0, 0, 0, 0.71)), url(img/background4.png);
-    background-size: 62%;          /* size of the img */  
-    background-repeat: repeat-y;
-    background-position-x: left;
-    background-position-y: 56%;
-    background-attachment: fixed;    
-    /*super cool effect where the image does not move*/
+.header-content {
+  background: #fff;
+  max-width: 315px;
+  position: absolute;
+  left: 65%;
+  text-align: justify;
+  padding: 40px 48px;
 }
-.content {
-    position: relative;
-    left: 50%;
-    top: 30%;
-    background: #fff;
-    text-align: justify;
-    padding: 50px;
-    max-width: 315px;
+.header-content p {
+  padding-top: 24px;
+  color: rgb(111, 125, 138);
+  font-size: 14px;
 }
-.content p {
-    padding-top: 30px;
-    color: rgb(111, 125, 138);
-    font-size: 12px;
+.header-content p span {
+  font-size: 8px;
 }
 
-/* --------------- Section_PRODUCTS --------------- */
-#artworks {
-    padding: 80px 0 80px;
+
+/* --------------- SECTION TITLE --------------- */
+.title {
+  text-align: center;
+  padding: 80px 0;
 }
 .fancyBorder {
-    display: block;       /* these first 2 prop. to center the img */
-    margin: 0 auto;
-    width: 500px;
-    height: auto;
+  display: block;       /* these first 2 prop. to center the img */
+  margin: 0 auto;
+  width: 500px;
+  height: auto;
+  padding-top: 20px;
 }
-#products_display {
-    max-width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 15px;
-    column-gap: 15px;
-    justify-content: center;   /* not between bc in smll screen, there is no margin left */
-    align-items: center;
-}
-/* following 2 prop.: for display prperly the img inside the a */
-.product img { display: block; }
-.product a { display: block; }
 
-.product img {
-    box-shadow: 1px 1px 20px -5px rgba(0, 0, 0, 50%);
+
+/* --------------- ARTWORKS --------------- */
+.products_display {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-.product {
-    text-align: center;
-    position: relative;         /* so I can make .centerDiv absolute */
+.products_display img {
+  width: 300px;
+  height: auto;
+  display: block;   /* so the img ocuppies only its space */
+  margin: 0 auto 10px;
 }
-.centerDiv {
-    position: absolute;
-    /* and I made his parent (product) position: relative */
-    /* Therefore the origin is the corner of the "product" */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+.column {
+  overflow: scroll;
+  height: 800px;
+}
+.paint {
+  position: relative;
+}
+.paint-info {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+.paint:hover .paint-info{
+  opacity: 1;
+}
+.paint-info p {
+  font-weight: 100;
+  font-size: 10px;
+  color: red;
+}
+
+
+/* --------------- CONTACT --------------- */
+form {     /* to center the form in the page */
+  display: grid;
+  justify-content: center;
+}
+.field {     /* to separate input and label */
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  margin-bottom: 8px;
+}
+textarea {
+  justify-self: end;
+  width: 100%;
+}
+.btn-form {
+  justify-self: center;     /* so the button ocuppies only its length */
+  margin-top: 16px;
+  background: none;
+  border: 2px solid;
+  border-radius: 50px;
+  line-height: 1;
+  padding: 1em 2em;
+  color: #a972cb;
+  transition: 0.25s;
+}
+.btn-form:hover,
+.btn-form:focus { 
+    border-color: #a972cb;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.7);
-    transition: all 0.3s ease;
-    opacity: 0;
-}
-.product:hover .centerDiv {
-    opacity: 1;
-}
-.in8x10 img {
-    height: 420px;
-    width: auto;
-}
-.in7x9 img {
-    height: 390px;
-    width: auto;
-}
-.in4x4 img {
-    height: 330px;
-    width: auto;
-}
-.exhi {
-    color: red;
-    font-size: 10px;
+    box-shadow: inset 0 0 0 2em #a972cb;
+    cursor: pointer;
 }
 
+
+/* --------------- FOOTER --------------- */
+.copyright {
+  margin-top: 48px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+}
+.madeby{
+  text-align: center;
+  padding-top: 8px;
+  font-size: 12px;
+  color: gray;
+}
+.tirsop {
+  text-align: center;
+  padding: 10px 0 50px;
+} 
+.avatar {
+  width: 40px;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  filter: brightness(80%);
+  transition: transform 0.5s, filter 0.5s;
+}
+.avatar:hover {
+  transform: scale(1.1);
+  filter: brightness(100%);
+}
+
+
+/* --------------- MEDIA_QUERIES--------------- */
+@media (max-width: 966px) {
+  main { max-width: 750px; }
+  .products_display img { width: 240px; }
+}
+@media (max-width: 768px) {
+  main { max-width: 630px; }
+  .products_display img { width: 200px; }
+  .column { height: 580px; }
+}
+@media (max-width: 640px) {
+  main { max-width: 510px; }
+  .products_display img { 
+    width: 164px; 
+    margin-bottom: 6px;
+  }
+  .column { height: 460px; }
+}
+
+@media (max-width: 547px) {
+  .products_display {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .column {
+    overflow: visible;
+    height: auto;
+  }
+  .products_display img {
+    width: 300px;
+  }
+  .fancyBorder {
+    width: 330px;
+  }
+  .header-bg {
+    height: 55vh;
+    background-position-y: top;
+    background-size: 100%;          
+    background-attachment: local; 
+  }
+  .header-content {
+    width: 60vw;
+    bottom: 7%;
+    left: 35%;
+    text-align: center;
+    padding: 16px 16px;
+  }
+  .header-content p {
+    padding-top: 16px;
+    font-size: 12px;
+  }
+  h1 {
+    font-size: 16px;
+  }
+}
