--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
   box-sizing: border-box;
 }
 a { 
-  text-decoration: none; 
+  text-decoration: none;
+  color: gray;
   display: inline-block;
 }
 ul { list-style: none; }
@@ -54,10 +55,10 @@ nav .links li {
   font-size: 12px;
 }
 .nav-logo {
-  height: 50px;
+  height: 70px;
   width: auto;
   border-radius: 50%;
-  box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 50%);
+  margin-left: 20px;
 }
 
 
