--- a/style.css
+++ b/style.css
@@ -119,9 +119,15 @@ nav .links li {
   display: block;   /* so the img ocuppies only its space */
   margin: 0 auto 10px;
 }
-.column {
-  overflow: scroll;
-  height: 800px;
+/* .column { */
+  /* overflow: scroll; */
+  /* height: 800px; */
+/* } */
+.column:nth-of-type(1) {
+  margin-top: 61px;
+}
+.column:nth-of-type(3) {
+  margin-top: 20px;
 }
 .paint {
   position: relative;
@@ -223,12 +229,10 @@ textarea {
 }
 @media (max-width: 768px) {
   main { max-width: 630px; }
-  .column { height: 580px; }
 }
 @media (max-width: 640px) {
   main { max-width: 510px; }
   .products_display img { margin-bottom: 6px; }
-  .column { height: 460px; }
 }
 @media (max-width: 547px) {
   .products_display {
